tests/invalid/Template_Invalid_25.whiley
type LinkedList<T> is null | { LinkedList next, T data }
type BinaryTree<T> is null | { BinaryTree<T> left, BinaryTree<T,T> right, T data }
